config/policies/validating-admission-policy-bound-serverReqPod.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: fma-bound-serverreqpod
  annotations:
    description: "Deny changes to annotations for bound Server Requesting Pods unless performed by an FMA controller service account."
spec:
  failurePolicy: Fail
  match:
    resources:
      - apiGroups: [""]
        apiVersions: ["v1"]
        kinds: ["Pod"]
        operations: ["Update"]
  validation:
    expression: |
      (
        (oldObject.metadata.annotations['dual-pods.llm-d.ai/server-patch'] != null || oldObject.metadata.annotations['dual-pods.llm-d.ai/inference-server-config'] != null) &&
        oldObject.metadata.labels['dual-pods.llm-d.ai/dual'] != null &&
        (
          oldObject.metadata.annotations['dual-pods.llm-d.ai/server-patch'] != object.metadata.annotations['dual-pods.llm-d.ai/server-patch'] ||
          oldObject.metadata.annotations['dual-pods.llm-d.ai/inference-server-config'] != object.metadata.annotations['dual-pods.llm-d.ai/inference-server-config'] ||
          oldObject.metadata.annotations['dual-pods.llm-d.ai/admin-port'] != object.metadata.annotations['dual-pods.llm-d.ai/admin-port']
        )
      ) && !request.userInfo.username.matches("system:serviceaccount:[^:]+:(launcher-populator|dual-pods-controller)$")
    message: "annotation cannot be changed once the request pod is bound to a providing pod"
